# Laplace

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  IDEAS.md  MEMORY.md  PRODUCT.md  README.md  SOUL.md  USER.md  docker-entrypoint.sh  pyproject.toml  需求描述.md
.github/workflows/: ci.yml
CodingReviewReport/: CodingReviewReport-20260505-Gemini.md  CodingReviewReport-20260505-Grok.md
demo/: app.js  index.html  logs.css  logs.html  logs.js  package-lock.json  style.css
demo/data/: servants_np_charge.json
deploy/: deploy.example.sh  deploy.sh  nginx.conf
docs/: CHANGELOG.md  DEPLOYMENT.md  PROJECT_INTRODUCTION.html  PROJECT_INTRODUCTION.md
docs/adr/: ADR-001-fgo-np-data-precision.md  ADR-002-data-fetching-strategy.md  ADR-003-ai-native-architecture.md  ADR-004-schema-mirror.md  ADR-005-structured-logging.md  ADR-006-pre-digestion.md  ADR-007-llm-contract.md  ADR-008-phase5-priority.md  ADR-009-filter-registry.md  ADR-010-knowledge-config-separation.md  (+11 more)
extractor/: np_charge_filter.py
server/: config_loader.py  data_loader.py  individuality.py  llm_client.py  logger.py  main.py  prompts.py  query_executor.py  rate_limiter.py  requirements.txt  schemas.py  sync_chaldea.py
tests/: test_agent_loop.py  test_class_advantage.py  test_effect_overlay.py  test_individuality.py  test_llm_client.py  test_llm_client_live.py  test_logger_async.py  test_query_executor.py  test_rate_limiter.py  test_schemas.py  test_skill_api.py  test_skill_framework.py  test_skill_routing.py  test_sync_chaldea.py  test_tool_handlers.py  test_translation_consistency.py
(+109 files in other folders)
