[project]
name = "laplace"
version = "0.5.0"
description = "AI Native FGO Data Assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "dashscope>=1.20.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "anyio>=4.0.0",
    "ruff>=0.9.0",
]

# ── Ruff ──────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modern syntax)
]
ignore = [
    "E501",  # line too long — handled by formatter
    "E741",  # ambiguous variable name (common in math-heavy code)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ── Pytest ────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
